<resources>
    <string name="app_name">Anabolix</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="timer">Timer</string>
    <string name="weather">Weather</string>
    <string name="exercise">Exercise</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pedometer">pedometer</string>
    <string name="step_count_out_of_num">%1$d / 10000</string>
    <string name="_0">0</string>


    <string name="title_activity_calorie_counter">CalorieCounterActivity</string>
    <string name="add_remove_calories">Add or Remove Calories:</string>
    <string name="current_calories">\t\tCurrent Calories:</string>

    <string name="Weather_Checker"> Search for Weather by Location! </string>
    <string name="Search"> Search for Weather by Location! </string>
    <string name="Enter_Location"> Enter Desired Location: </string>


    <!-- Login related strings -->
    <string name="facebook_application_id" translatable="false">367527987927813</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb367527987927813</string>
    <string name="calorie_counter">Calorie Counter</string>
    <string name="exercises">Exercises</string>
    <string name="log_out">Log Out</string>
    <string name="run">Run</string>
    <string name="weight">Weight</string>
    <string name="continue_string">Continue</string>
    <string name="more">More</string>
    <string name="autumn_image">autumn_image</string>
    <string name="searchArrow"><![CDATA[->]]></string>
    <string name="finish_run">Finish Run</string>
    <string name="start">Start</string>
    <string name="log_your_calories">Log your calories</string>
    <string name="go_on_a_run">Go on a run</string>
    <string name="enter_city">Enter City</string>
    <string name="set_a_daily_reminder">Set a daily reminder</string>
    <string name="set_a_reminder_to_walk">Set a reminder to walk</string>

    <string-array name="exercise_list">
        <item>Strength</item>
        <item>Cardio</item>
        <item>Endurance</item>
        <item>Flexibility</item>
        <item>Coordination</item>
        <item>Balance</item>

    </string-array>

    <string-array name="exercise_descriptions">
        <item>Body weight and external weight exercises to build strength and promote growth in muscles</item>
        <item>Low intensity and high intensity workouts to build a healthy heart and cardiovascular strength</item>
        <item>Prolonged low intensity workouts to build oxygen supply and time under tension</item>
        <item>Exercises that promote stretching and flexing of muscles to increase motion in muscles and joints</item>
        <item>Activities that help with mind and muscle connection to form better coordination </item>
        <item>Movements that focus on centering the body to aid in better balance</item>
    </string-array>

</resources>
