<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp">


    <Button
        android:id="@+id/searchLocation"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#0734B9"
        android:onClick="search"
        android:text="@string/searchArrow"
        android:textSize="24sp"
        app:iconTint="#0734B9"
        tools:text="->" />

    <TextView
        android:id="@+id/WeatherText"
        android:layout_width="253dp"
        android:layout_height="wrap_content"

        android:layout_above="@+id/Display1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="11dp"
        android:text="@string/Search"
        android:textColor="#1649EC"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editCity"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:layout_toStartOf="@id/searchLocation"
        android:editable="true"
        android:ems="10"
        android:hint="Enter City"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/EnterLocation"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:layout_above="@+id/editCity"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Enter_Location"
        android:textColor="#1649EC"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/Display1"
        android:layout_width="371dp"
        android:layout_height="125dp"
        android:layout_above="@+id/EnterLocation"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="11dp"
        android:editable="false"
        android:gravity="center"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/FallImage"
        android:layout_width="match_parent"
        android:layout_height="409dp"
        android:layout_above="@+id/WeatherText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/autumn_image"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/fall_mountains"
        tools:srcCompat="@drawable/fall_mountains" />

</RelativeLayout>